--- a/EnemyFix/EnemyFix.csproj
+++ b/EnemyFix/EnemyFix.csproj
@@ -65,5 +65,8 @@
     <Compile Include="Utilities\Logger.cs" />
     <Compile Include="Utilities\PluginInfos.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="README.md" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
